networking/betweenpods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowhttp

spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
           matchLabels:
             app: nginx1
    - ports:
        - port: 80
          protocol:
            TCP
