networking/dd.yaml
---

apiVersion: networking.k8s.io/v1

kind: NetworkPolicy


metadata:
  namespace: production
  name: default-deny-ingress

spec:

  podSelector: {}

  policyTypes:

  - Ingress
  - Egress
