networking/dddd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app2-policy
  namespace: app2
spec:
  podSelector:
  policyTypes:
    - Ingress
