networking/denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: mub
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
